# DockerGenius

./: .gitignore  README.md  pyproject.toml
.github/agents/: docker-ops.agent.md
dockergenius/cli/: main.py
dockergenius/core/: advisor.py  diff.py  engine.py  scorer.py  snapshot.py
dockergenius/docker/: client.py  containers.py  images.py  networks.py  system.py  volumes.py
dockergenius/dockergenius/analytics/: disk.py
dockergenius/dockergenius/cli/: main.py
dockergenius/integrations/: grype.py  trivy.py
dockergenius/output/: markdown.py
dockergenius/remediation/: fixer.py  scripts.py
dockergenius/security/: analyzer.py  scanner.py
dockergenius/ui/web/: api.py
dockergenius/ui/web/static/: advisor.html  app.js  audit.html  containers.html  images.html  index.html  networks.html  scan.html  snapshots.html  storage.html  styles.css  system.html  volumes.html
dockergenius/utils/: cache.py  config.py
