[project]
name = "dockergenius"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "textual>=0.70.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "docker>=7.1.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.1",
]

[project.scripts]
dockergenius = "dockergenius.cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
